# lms

./: .coveragerc  .gitignore  Dockerfile  Dockerfile.local  Dockerfile.prod  LICENCE  Makefile  README.md  conf.docker-compose-logs  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: django.yml  tests.yml
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: helpers.py
apps/users/tests/models/: test_user_model.py  test_user_model_validators.py
books/: models.py
books/migrations/: 0002_add_book_data.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  get_env_variable.py  local.py  loggers.py  production.py
config/settings/tests/: test_get_env_variable.py
core/: models.py
nginx/: Dockerfile  lms_nginx_docker.conf
src/books/: api.py  models.py  schema.py
src/books/management/commands/: _private.py  add_book_data.py
src/books/migrations/: 0001_initial.py  0002_add_book_data.py
src/books/tests/: test_book_model.py
src/core/: api.py
src/data_files/: books.csv
src/helpers/commands/: csv_import.py
src/helpers/tests/: test_csv_import_helpers.py
src/users/: managers.py  models.py
src/users/migrations/: 0001_initial.py
src/users/tests/: helpers.py
src/users/tests/models/: test_user_model.py  test_user_model_validators.py
users/: models.py  validators.py
users/tests/: helpers.py
users/tests/models/: test_user_model.py  test_user_model_validators.py
