[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.0"
gunicorn = "^20.1.0"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
