[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
django-cors-headers = "^3.11.0"
types-freezegun = "^1.1.6"
coverage = "^6.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
isort = "^5.10.1"
black = "^21.12b0"
django-stubs = "^1.9.0"
python-dotenv = "^0.19.2"
pytest-django = "^4.5.2"
freezegun = "^1.1.0"
pytest = "^7.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.local"

[tool.isort]
profile = "hug"
known_django = "django"
line_length = 88
wrap_length = 88
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "DJANGO", "THIRDPARTY", "LOCALFOLDER"]
